--- a/index.html
+++ b/index.html
@@ -1,1 +1,66 @@
-<!DOCTYPE html> <html> <head> <title>Maintenance</title> <meta http-equiv="content-type" content="text/html; charset=utf-8" > <meta name="viewport" content="width=device-width, initial-scale=1.0"> <link href="css/uxcore.css" rel="stylesheet"> <link href="css/customer-comp.css" rel="stylesheet">  <script type='text/javascript'> var fqdn = "P3NWVPWEB027.shr.prod.phx3.secureserver.net"; redirectToLogin = function() { 	window.location.href = "https://" + fqdn + ":8443"; } </script>	 </head>  <body> <div id="error-img"><img src="images/404_background.jpg"></div> <div class="container text-center" id="error">       <div class="row">     <div class="col-md-12">       <div class="main-icon text-success"><span class="uxicon uxicon-clock-refresh"></span></div>       <h1>Future home of something quite cool.</h1>       <p class="lead">If you're the <strong>site owner</strong>, <a href="#" onclick='redirectToLogin();'>log in</a> to launch this site</p>       <p class="lead">If you are a <strong>visitor</strong>, check back soon.</p>     </div>   </div>  </div>  </body> </html>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Hello Wolrd</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+	<style type='text/css'>
+	.embeddedServiceHelpButton .helpButton .uiButton {
+		background-color: #005290;
+		font-family: "Arial", sans-serif;
+	}
+	.embeddedServiceHelpButton .helpButton .uiButton:focus {
+		outline: 1px solid #005290;
+	}
+</style>
+
+<script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
+<script type='text/javascript'>
+	var initESW = function(gslbBaseURL) {
+		embedded_svc.settings.displayHelpButton = true; //Or false
+		embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
+
+		//embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
+		//embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
+
+		//embedded_svc.settings.loadingText = ''; //(Defaults to Loading)
+		//embedded_svc.settings.storageDomain = 'yourdomain.com'; //(Sets the domain for your deployment so that visitors can navigate subdomains during a chat session)
+
+		// Settings for Field Service
+
+		embedded_svc.settings.enabledFeatures = ['FieldService'];
+		embedded_svc.settings.entryFeature = 'FieldService';
+
+		embedded_svc.settings.useCustomAuthentication = false;
+		embedded_svc.settings.loginClientId = '';
+		embedded_svc.settings.loginRedirectURL = '';
+		embedded_svc.settings.loginTargetQuerySelector = '';
+		embedded_svc.settings.authenticationStartLabel = '';
+
+		embedded_svc.init(
+			'https://na44.stmfa.stm.salesforce.com',
+			'https://vtpoth.stmfa.stm.force.com/1',
+			gslbBaseURL,
+			'00DRM000000GXSq',
+			'In_Bound',
+			{
+				
+			}
+		);
+	};
+
+	if (!window.embedded_svc) {
+		var s = document.createElement('script');
+		s.setAttribute('src', 'https://na44.stmfa.stm.salesforce.com/embeddedservice/5.0/esw.min.js');
+		s.onload = function() {
+			initESW(null);
+		};
+		document.body.appendChild(s);
+	} else {
+		initESW('https://service.force.com');
+	}
+</script>
+</head>
+<body>
+	Hello World
+</body>
+</html>
